--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
     <title>Mee6 Calculator</title>
     <script type="text/javascript" src="calc.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="wrapper">
         <header class="titles">
             <h1 class="title generic-font"><a class="mee6-link" href="https://mee6.xyz">mee6.xyz</a> Level Calculator</h1>
-            <h2 class="sub-title generic-font">Calculate messages needed to send in order to reach a level</h2>
+            <h2 class="sub-title generic-font">Calculate messages needed to send <i>(for every minute)</i> in order to reach a level</h2>
         </header>
 
         <div class="input-fields">
             <input type="number" class="input-box generic-font" id="desired-level" placeholder="Desired Level">
             <input type="number" class="input-box generic-font" id="current-xp" placeholder="Current XP">
-            <a class="button-calculate generic-font" onclick="calculate()">Calculate</a>
+            <a class="button-calculate generic-font" onclick="calculate()" href="#result">Calculate</a>
         </div>
 
-        <div class="results">
+        <div class="results" id="result">
             <div class="result-main">
                 <h2 class="result-title generic-font">Result: Avg. of <span id="result-average">_</span> messages</h2>
                 <span class="result-sub-title generic-font"> required to send until you reach that level.</span>
                 <!-- <span class="sub-title">Average of  messages left</span> -->
                 <span class="result-xp-left generic-font">(You need another <span id="result-xp-needed">_</span> XP)</span>
+                <br>
+                <span class="generic-font"><strong>NOTE:</strong> You can only gain XP once for every minute.</span>
             </div>
 
             <div class="result-max-min-messages">
